--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body {
     --link-color: #888888;
     --card-paragraph-color: #c4c4c4;
     --card-html-color2: #e34c26;
-    --card-html-color: #030303;
+    --card-html-color: #f06529;
     --card-js-color: #f0db4f;
     --card-js-color2: #c7ab1a;
     --card-css-color2: #264de4;
